# Unified-Intrinsics

./: .gitignore  CMakeLists.txt  README.md
cmake/: Emscripten.cmake  StandardProjectSettings.cmake
examples/: CMakeLists.txt  example_1.cpp
include/: ui.hpp
include/ui/: base.hpp  base_vec.hpp  bits.hpp  features.hpp  float.hpp  format.hpp  forward.hpp  maths.hpp  matrix.hpp  modular_inv.hpp  vec_headers.hpp  vec_op.hpp
include/ui/arch/: arch.hpp  basic.hpp  cast_float.hpp  cpu_info.hpp  matrix.hpp
include/ui/arch/arm/: abs.hpp  add.hpp  arm.hpp  basic.hpp  bit.hpp  cast.hpp  cast_float.hpp  cmp.hpp  div.hpp  join.hpp  load.hpp  logical.hpp  manip.hpp  matrix.hpp  minmax.hpp  mul.hpp  permute.hpp  prefetch.hpp  reciprocal.hpp  rounding.hpp  shift.hpp  sqrt.hpp  sub.hpp
include/ui/arch/emul/: abs.hpp  add.hpp  bit.hpp  cast.hpp  cmp.hpp  div.hpp  int_mask.hpp  load.hpp  logical.hpp  manip.hpp  minmax.hpp  mul.hpp  permute.hpp  prefetch.hpp  reciprocal.hpp  rounding.hpp  shift.hpp  sqrt.hpp  sub.hpp
include/ui/arch/wasm/: abs.hpp  add.hpp  basic.hpp  bit.hpp  cast.hpp  cmp.hpp  div.hpp  int_mask.hpp  join.hpp  load.hpp  logical.hpp  manip.hpp  minmax.hpp  mul.hpp  permute.hpp  prefetch.hpp  reciprocal.hpp  rounding.hpp  shift.hpp  sqrt.hpp  sub.hpp
include/ui/arch/x86/: abs.hpp  add.hpp  basic.hpp  bit.hpp  cast.hpp  cmp.hpp  div.hpp  join.hpp  load.hpp  logical.hpp  manip.hpp  minmax.hpp  mul.hpp  permute.hpp  prefetch.hpp  reciprocal.hpp  rounding.hpp  shift.hpp  sqrt.hpp  sub.hpp
test/: CMakeLists.txt
test/runtime/: CMakeLists.txt  abs_test.cpp  add_test.cpp  bit_test.cpp  cast_test.cpp  cmp_test.cpp  div_test.cpp  load_test.cpp  logical_test.cpp  manip_test.cpp  minmax_test.cpp  mul_test.cpp  reciprocal_test.cpp  round_test.cpp  shift_test.cpp  sqrt_test.cpp  sub_test.cpp  utils.hpp
