if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|i[3-6]86)$")
  add_subdirectory(x86)
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm|aarch64|arm64)$")
  add_subdirectory(arm)
else()
  add_subdirectory(emul)
endif()

# add_catch_test(cast_test.cpp TRUE)
# add_catch_test(shift_test.cpp TRUE)
# add_catch_test(add_test.cpp TRUE)
# add_catch_test(sub_test.cpp TRUE)
# add_catch_test(abs_test.cpp TRUE)
# add_catch_test(bit_test.cpp TRUE)
add_catch_test(cmp_test.cpp TRUE)
